<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.fragments.LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/backBtn"
                android:src="@drawable/back_arrow"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/welcome_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:fontFamily="@font/semibold"
                android:text="@string/welcome_back"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/semibold"
                android:text="@string/login_as_worker"
                android:textColor="@color/primary_green"
                android:textSize="22sp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/semibold"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/login"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/semibold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:textSize="14sp"
                    android:hint="@string/enter_email"
                    android:background="@drawable/gray_border" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:textSize="14sp"
                    android:hint="Enter the Password"
                    android:background="@drawable/gray_border" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_rounded_btn_bg"
                android:text="@string/login"
                android:fontFamily="@font/semibold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:visibility="invisible"
                android:indeterminateTint="@color/secondary_teal"
                app:layout_constraintTop_toTopOf="@id/logInButton"
                app:layout_constraintBottom_toBottomOf="@+id/logInButton"
                app:layout_constraintEnd_toEndOf="@+id/logInButton"
                app:layout_constraintStart_toStartOf="@+id/logInButton" />

            <TextView
                android:id="@+id/are_you_a_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/semibold"
                android:text="@string/are_you_a_new_user"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toStartOf="@+id/logInButton"
                app:layout_constraintTop_toBottomOf="@id/logInButton" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/bold"
                android:text="@string/sign_up"
                android:textColor="@color/primary_green"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/are_you_a_new_user"
                app:layout_constraintStart_toEndOf="@+id/are_you_a_new_user"
                app:layout_constraintTop_toTopOf="@+id/are_you_a_new_user" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>