<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormSubmissionActvity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/primary_green"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_waste"
            android:textColor="@color/white"
            android:fontFamily="@font/semibold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/waste_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/gray_border"
                android:paddingHorizontal="6dp"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/semibold"
                android:text="@string/waste_type"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/waste_img" />

            <Spinner
                android:id="@+id/waste_type_selector"
                android:layout_width="0dp"
                android:layout_height="39dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_border"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <ImageView
                android:id="@+id/arrow_down"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/drop_down_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/waste_type_selector"
                app:layout_constraintEnd_toEndOf="@+id/waste_type_selector"
                app:layout_constraintTop_toTopOf="@+id/waste_type_selector" />


            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/description"
                android:textColor="@color/text_black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/waste_type_selector" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/gray_border"
                android:fontFamily="@font/medium"
                android:gravity="start"
                android:hint="@string/desription_optional"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionText" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:visibility="invisible"
                android:indeterminateTint="@color/secondary_teal"
                app:layout_constraintTop_toTopOf="@id/submitButton"
                app:layout_constraintBottom_toBottomOf="@+id/submitButton"
                app:layout_constraintEnd_toEndOf="@+id/submitButton"
                app:layout_constraintStart_toStartOf="@+id/submitButton" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/green_rounded_btn_bg"
                android:fontFamily="@font/semibold"
                android:text="@string/submit"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>