<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_marginBottom="16dp"
    android:layout_height="wrap_content"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="140dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/img_card_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="15dp">
            <ImageView
                android:id="@+id/waste_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/banner_img_1"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/typeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/img_card_view"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dry: "
            android:textColor="@color/text_black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/typeText"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/StatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/img_card_view"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/type"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pending"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/StatusText"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/type"/>
        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/img_card_view"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pending"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/descriptionText"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/status"/>

        <TextView
            android:id="@+id/createdAtText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/img_card_view"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/description"/>

        <TextView
            android:id="@+id/createdAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pending"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/createdAtText"
            android:fontFamily="@font/semibold"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>